--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-  <string name="app_name">taskbuddy</string>
-  <string name="expo_runtime_version">1.1.0</string>
+    <string name="app_name">TaskBuddy</string>
 </resources>
